--- a/public/lgpd/politica-privacidade-v1.0.html
+++ b/public/lgpd/politica-privacidade-v1.0.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Política de Privacidade - AgendaSIM v1.0</title>
+    <title>Política de Privacidade - AgendeSIM v1.0</title>
     <style>
         * {
             margin: 0;
@@ -229,11 +229,11 @@
         </div>
 
         <h2>1. INTRODUÇÃO</h2>
-        <p>Esta Política de Privacidade descreve como o AgendaSIM coleta, usa, armazena e protege suas informações pessoais quando você utiliza nossa plataforma de agendamento online. Estamos comprometidos em proteger sua privacidade e garantir o tratamento adequado de seus dados pessoais, em conformidade com a Lei Geral de Proteção de Dados (LGPD) e demais legislações aplicáveis.</p>
+        <p>Esta Política de Privacidade descreve como o AgendeSIM coleta, usa, armazena e protege suas informações pessoais quando você utiliza nossa plataforma de agendamento online. Estamos comprometidos em proteger sua privacidade e garantir o tratamento adequado de seus dados pessoais, em conformidade com a Lei Geral de Proteção de Dados (LGPD) e demais legislações aplicáveis.</p>
 
         <div class="contact-info">
             <h2>2. RESPONSÁVEL PELO TRATAMENTO</h2>
-            <h4>AgendaSIM</h4>
+            <h4>AgendeSIM</h4>
             <p><strong>Email:</strong> contato@agendasim.com.br</p>
             <p><strong>Telefone:</strong> (11) 99999-9999</p>
             <p><strong>Endereço:</strong> São Paulo/SP, Brasil</p>
