--- a/public/lgpd/termos-uso-v1.0.html
+++ b/public/lgpd/termos-uso-v1.0.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Termos de Uso - AgendaSIM v1.0</title>
+    <title>Termos de Uso - AgendeSIM v1.0</title>
     <style>
         * {
             margin: 0;
@@ -172,10 +172,10 @@
         </div>
 
         <h2>1. ACEITAÇÃO DOS TERMOS</h2>
-        <p>Ao utilizar a plataforma AgendaSIM, você concorda em cumprir e estar vinculado a estes Termos de Uso. Se você não concordar com qualquer parte destes termos, não deve utilizar nossa plataforma.</p>
+        <p>Ao utilizar a plataforma AgendeSIM, você concorda em cumprir e estar vinculado a estes Termos de Uso. Se você não concordar com qualquer parte destes termos, não deve utilizar nossa plataforma.</p>
 
         <h2>2. DESCRIÇÃO DO SERVIÇO</h2>
-        <p>O AgendaSIM é uma plataforma de agendamento online que permite:</p>
+        <p>O AgendeSIM é uma plataforma de agendamento online que permite:</p>
         <ul>
             <li><strong>Gestão de Empresas:</strong> Cadastro e configuração de empresas prestadoras de serviços</li>
             <li><strong>Gestão de Profissionais:</strong> Cadastro e administração de profissionais e suas disponibilidades</li>
